Fix pars and save to DB